[gd_scene load_steps=9 format=2]

[ext_resource path="res://levels/debug.gd" type="Script" id=1]
[ext_resource path="res://fonts/button1.tres" type="DynamicFont" id=2]
[ext_resource path="res://backgounds/nebula_-_6044 (720p).ogv" type="VideoStream" id=3]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/title.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Debug" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="nebula" type="VideoPlayer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 3 )
autoplay = true
loop = true

[node name="Game name" type="Label" parent="."]
margin_left = 108.0
margin_top = 61.0
margin_right = 1168.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 5 )
text = "Debug Menu"
align = 1
valign = 1

[node name="Bottomhud" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 356.0
margin_top = 236.0
margin_right = 911.0
margin_bottom = 712.0

[node name="Gamepad Test" type="Button" parent="VBoxContainer"]
margin_right = 555.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Gamepad Test"

[node name="Scene Selector" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 555.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )
text = "Scene Selector"

[node name="Sound Test" type="Button" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 555.0
margin_bottom = 356.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Sound Test"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 360.0
margin_right = 555.0
margin_bottom = 476.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Back"

[connection signal="pressed" from="VBoxContainer/Gamepad Test" to="." method="_on_gamepad_test_pressed"]
[connection signal="pressed" from="VBoxContainer/Scene Selector" to="." method="_on_scene_selector_pressed"]
[connection signal="pressed" from="VBoxContainer/Sound Test" to="." method="_on_sound_test_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
